--- a/test_helpers/fixtures/all_the_features.org
+++ b/test_helpers/fixtures/all_the_features.org
@@ -36,6 +36,9 @@
      - State "DONE"       from "TODO"       [2019-09-22 Sun 11:27]
 
 **** TODO <2019-12-30 Mon> I have a timestamp in the title
+**** TODO I have a timestamp in the description
+This one: <2019-12-30 Mon>
+
 **** TODO [2019-12-30 Mon] I have an inactive timestamp in the title
 
 ** Tables, clock reports, time entries, source blocks
