--- a/changelog.org
+++ b/changelog.org
@@ -5,6 +5,12 @@ All user visible changes to organice will be documented in this file.
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
 
+* [2020-01-20 Mon]
+
+** Fixed
+   - In the agenda view, fix relative time distance for future dates
+     - Thank you [[https://github.com/schoettl][@schoettl]] for the [[https://github.com/200ok-ch/organice/pull/240][PR]] 🙏
+
 * [2020-01-15 Wed]
 
 ** Fixed
