--- a/changelog.org
+++ b/changelog.org
@@ -4,6 +4,13 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2020-02-09 Sun]
+
+** Added
+   - Comprehensive documentation: https://organice.200ok.ch/documentation.html
+     - You can find the link from the 'settings' screen or on top of
+       the readme.
+
 * [2020-01-27 Mon]
 
 ** Fixed
